# collaborative-checkboxes

./: .gitignore  Dockerfile  README.md  SETUP-TROUBLESHOOTING.md  collaboration-test.spec.js  debug-enhanced.js  debug-persistence.js  index.html  main.ts  netlify.toml  package.json  playwright.config.ts  railway.json  serve.py  test-database-direct.js  test-fixed.spec.js  test-integration.sh  test-mouse.spec.js  test-panning.spec.js  test-websocket-sync.ts  test.spec.js
backend/: Cargo.toml  spacetime.json  spacetime.json.local
cs-src/: AddChunkReducer.cs  CheckboxChunk.cs  UpdateCheckboxReducer.cs
docs/: TESTING.md
frontend/: COLLABORATIVE_MODE.md  Cargo.toml  Cargo.toml.backup  README.md  index.html  style.css  test_with_server.sh
frontend-rust/: Cargo.toml  doom-jacobenget.js  doom-mode.js  index.html
frontend/src/: async_handlers.rs  chunk_cache.rs  collaborative_state.rs  lib.rs  spacetimedb_client.rs  subscription_manager.rs
frontend/tests/: integration_test.rs
playwright-report/: index.html  results.json
scripts/: package.json  reset-staging.js  reset-staging.test.js  reset-test-state.js  spacetimedb-local.sh  test-db-manager.js
test-results/: .last-run.json
tests/: billionth-checkbox.spec.ts  debug-bindings.spec.ts  doom-performance.spec.ts  doom-spectator.spec.ts  navigation.spec.ts  rust-sync.spec.ts  stress.spec.ts  sync.spec.ts  visibility.spec.ts  websocket-sync.spec.ts  websocket-throughput.spec.ts  worker-performance.spec.ts
tests/ws-propagation/: Cargo.toml  main.rs
websocket-test-client/: Cargo.toml
websocket-test-client/src/: main.rs
(+89 files in other folders)
