[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement", "Element", "KeyboardEvent", "MouseEvent"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
spacetimedb = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
