[package]
name = "ws-propagation-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ws-propagation-test"
path = "main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
spacetimedb-sats = "2.0"
spacetimedb-lib = "2.0"
spacetimedb-client-api-messages = "2.0"
bytes = "1"
brotli = { version = "3.5", default-features = false, features = ["std"] }
flate2 = "1"
